Button alignment fix.

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1696,3 +1696,8 @@ span#select2-instrument_id-container {
 .p-l-5 {
   padding-left: 5px;
 }
+@media (max-width: 768px) {
+  .m-15 {
+    margin: 15px;
+  }
+}
